--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*!
 	Theme Name: Mujo Pro
 	Theme URI: http://mujo.ro/
-	Description: This is the Mujo theme created for the Genesis Framework.
+	Description: This is the MUJO theme created for the Genesis Framework.
 	Author: Seo Themes & Andrei Chira
 	Author URI: http://simplenet.ro/
 	Version: 0.1.2
