--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-	Theme Name: Genesis Sample
+	Theme Name: Mujo Pro
 	Theme URI: http://www.studiopress.com/
 	Description: This is the sample theme created for the Genesis Framework.
 	Author: StudioPress
@@ -157,7 +157,7 @@ body > div {
 }
 
 body {
-	background-color: #eee;
+	background-color: #fff;
 	color: #333;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 20px;
@@ -260,7 +260,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Old Standard TT', Georgia, serif;
 	font-weight: 600;
 	line-height: 1.2;
 	margin: 0 0 10px;
@@ -773,7 +773,7 @@ th:first-child {
 .entry-content .search-form,
 .site-header .search-form {
 	margin-bottom: 40px;
-	width: 50%;
+	width: 80%;
 }
 
 .site-header .search-form {
@@ -1054,7 +1054,7 @@ img.alignright,
 .title-area {
 	float: left;
 	padding: 10px 0;
-	width: 300px;
+	width: 25%;
 }
 
 .header-image .title-area {
@@ -1114,7 +1114,7 @@ img.alignright,
 .site-header .widget-area {
 	float: right;
 	text-align: right;
-	width: 800px;
+	width: 25%;
 }
 
 
@@ -1234,8 +1234,10 @@ img.alignright,
 --------------------------------------------- */
 
 .nav-primary {
-	background-color: #fff;
-	border-top: 1px solid #eee;
+	width: 50%;
+    text-align: center;
+	float: left;
+	text-transform: uppercase;
 }
 
 /* ## Footer Navigation
@@ -1617,8 +1619,7 @@ p.entry-meta {
 		width: 920px;
 	}
 
-	.content,
-	.site-header .widget-area {
+	.content {
 		width: 800px;
 	}
 
