--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Old Standard TT', Georgia, serif;
+	font-family: Georgia, serif;
 	font-weight: 600;
 	line-height: 1.2;
 	margin: 0 0 10px;
