--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-	Theme Name: Mujo Pro
-	Theme URI: http://www.studiopress.com/
+	Theme Name: Miya
+	Theme URI: https://fasterwp.com/
 	Description: This is the sample theme created for the Genesis Framework.
-	Author: StudioPress
-	Author URI: http://www.studiopress.com/
+	Author: Andrei Chira & StudioPress & Sridhar Katakam
+	Author URI: https://fasterwp.com/
 
 	Version: 2.3.0
 
